--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Validacion de Tarjeta</h1>
     <header></header>
     <main></main>
     <footer></footer>
