--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           <!-- Este h3 mostrara un segundo mensaje-->
           <h3 id="message" class="center"></h3>
           <!-- Este h3 mostrara el maskify del nro de tarjeta-->
-          <h3 id=cardNumberAfter class="center"></h3>
+          <h3 id="cardNumberAfter" class="center"></h3>
           <!-- Este div mostrara hipervinculos de descuentos si la tarjeta es valida-->
           <div id="benefits"></div>
           <!-- Boton para regresar a la pantalla principal-->
