--- a/src/index.html
+++ b/src/index.html
@@ -20,27 +20,28 @@
           <!--Agregamos un boton para comenzar, al cual le asociaremos el evento de pasar a la siguiente seccion 
               mediante addEventListener en JS-->
           <button id="go" type="button">Comenzar</button><br><br>
-          <img src="creditcard.png" alt="credit card">
+          <img src="img/creditcard.png" alt="credit card" class="imgcard">
       </section> 
       <!--Definiremos una segunda seccion la cual contendra un formulario para introducir el nro de la tarjeta-->
       <section id="inputCreditCard" style="display:none;">
-          <form action="">
+          <form id="data" autocomplete="off">
               <!--Input para nombre de usuario que utilice la app-->
               <label for="name" class="label">Tu nombre:</label><br>
               <input type="text" id="userName" placeholder="Escribe tu nombre" required/>
-              <p id="empty1"></p>
+              <p id="empty1" class="text2"></p>
               <!--Input para el nro de la tarjeta a validar-->
               <label for="number" class="label">Nro de tu tarjeta:</label><br>
-              <input type="number" id="creditCard" placeholder="" required/>
-              <p id="empty2"></p>
-              <!--Boton para validar la tarjeta de credito-->
-              <button id="validation" type="button">Validar</button>
-          </form>
+              <input type="number" id="creditCard" placeholder="Nro de tarjeta a validar" required/>
+              <p id="empty2" class="text2"></p>
+            <!--Boton para validar la tarjeta de credito-->
+            <button id="validation" type="button">Validar</button>
+          </form>  
       </section>
       <!--Definimos una tercera seccion la cual contiene los resultados de la tarjeta-->
       <section id="valid" style="display: none;">
           <!-- Este h2 mostrara el mensaje-->
           <h2 id="messageValid"></h2>
+          <div id="imageCheck"></div>
           <!-- Este h3 mostrara un segundo mensaje-->
           <h3 id="message" class="center"></h3>
           <!-- Este h3 mostrara el maskify del nro de tarjeta-->
@@ -50,9 +51,9 @@
           <!-- Boton para regresar a la pantalla principal-->
           <button id="return" type="button">Volver</button>
       </section>
-    </section>
   </main>
   <footer>Developed in Laboratoria CC SCL 14 - A.Y</footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
+
